# mcd

./: Cargo.toml
examples/: example.rs
src/: command.rs  errors.rs  file.rs  java.rs  lib.rs  libs.rs  log_indicator.rs  os.rs  resource.rs  util.rs
src/api/: assets.rs  client.rs  manifest.rs  mod.rs
test/: manifest.json
