[package]
name = "mcd"
version = "0.3.2"
edition = "2024"
description = "Simple mc downloader"
authors = ["k3nder <k3nder@outlook.es>"]
license-file = "LICENSE.md"

[dependencies]
dwldutil = { version = "=2.0.2", features = ["decompress", "normal_zip", "gzip"] }
log = "0.4.27"
rand = "0.9.1"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"

[dev-dependencies]
env_logger = "0.11.8"
anyhow = "1.0.98"
