[package]
name = "mcd"
version = "0.3.3"
edition = "2024"
description = "Simple mc downloader"
authors = ["k3nder <k3nder@outlook.es>"]
license-file = "LICENSE.md"

[dependencies]
dwldutil = { version = "3.0.1", features = ["decompress", "normal_zip", "gzip", "no_static_client"] }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dwldutil = { version = "3.0.1", features = ["indicatif_indicator"] }
